src/pages/links.module.css
.title {
  font-size: 4vw;
}
.logo {
  width: 33vw;
}
.headers {
  font-size: 7vw;
  text-transform: uppercase;
}
.itemContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.groupContainer {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  row-gap: 5vw;
}
.groupContainerDonate {
  display: flex;
  /* justify-content: space-around; */
  flex-wrap: wrap;
  column-gap: 5vw;
}
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 10vw;
  max-width: 1000px;
}
.containerContainer {
  display: flex;
  justify-content: center;
}
.upcoming {
  line-height: 5vw;
}
.questions {
  line-height: 5vw;
  display: flex;
  flex-direction: column;
}

